# pandas-stubs

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  attempt.py  conftest.py  matplotlib  parse.py  pyproject.toml  pyrightconfig-strict.json  pyrightdistconfig.json  pyrighttestconfig.json  runtests.bat  runtests.sh  setup.cfg  setup.py  stubtest_allowlist  t.py  table.rst  test  test.py  testing.py  ttest.py  type_completeness.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/setup/: action.yaml
.github/workflows/: comment_action.yaml  comment_commands.yml  optional.yml  pipeline.yml  test.txt  test.yml
docs/: 0 - structure.md  1 - setup.md  2 - tests.md  3 - style.md  4 - ci-cd.md  4 - security.md  5 - publish.md  6 - release.md  README.md  philosophy.md  release_procedure.md  setup.md  style.md  tests.md
pandas-stubs/: __init__.pyi  _typing.pyi  _version.pyi  testing.pyi
pandas-stubs/_config/: __init__.pyi  config.pyi
pandas-stubs/_libs/: __init__.pyi  arrays.pyi  indexing.pyi  interval.pyi  json.pyi  lib.pyi  missing.pyi  ops_dispatch.pyi  properties.pyi  sparse.pyi
pandas-stubs/_libs/tslibs/: __init__.pyi  base.pyi  ccalendar.pyi  conversion.pyi  dtypes.pyi  nattype.pyi  np_datetime.pyi  offsets.pyi  parsing.pyi  period.pyi  strptime.pyi  timedeltas.pyi  timestamps.pyi  tzconversion.pyi  vectorized.pyi
pandas-stubs/_stubs_only/: __init__.pyi
pandas-stubs/_testing/: __init__.pyi
pandas-stubs/api/: __init__.pyi
pandas-stubs/api/extensions/: __init__.pyi
pandas-stubs/api/indexers/: __init__.pyi
pandas-stubs/api/interchange/: __init__.pyi
pandas-stubs/api/types/: __init__.pyi
pandas-stubs/api/typing/: __init__.pyi
pandas-stubs/arrays/: __init__.pyi
pandas-stubs/compat/: __init__.pyi  _optional.pyi  pickle_compat.pyi
pandas-stubs/compat/numpy/: __init__.pyi
pandas-stubs/core/: accessor.pyi  algorithms.pyi  api.pyi  apply.pyi  arraylike.pyi  base.pyi  col.pyi  common.pyi  config_init.pyi  construction.pyi  frame.pyi  generic.pyi  indexers.pyi  indexing.pyi  missing.pyi  nanops.pyi  resample.pyi  series.pyi  sorting.pyi  strings.pyi
pandas-stubs/core/arrays/: __init__.pyi  _arrow_string_mixins.pyi  _mixins.pyi  base.pyi  boolean.pyi  categorical.pyi  datetimelike.pyi  datetimes.pyi  floating.pyi  integer.pyi  interval.pyi  masked.pyi  numeric.pyi  numpy_.pyi  period.pyi  string_.pyi  string_arrow.pyi  timedeltas.pyi
pandas-stubs/core/computation/: align.pyi  api.pyi  common.pyi  engines.pyi  eval.pyi  expr.pyi  expressions.pyi  ops.pyi  parsing.pyi  pytables.pyi  scope.pyi
pandas-stubs/core/dtypes/: api.pyi  base.pyi  cast.pyi  common.pyi  concat.pyi  dtypes.pyi  generic.pyi  inference.pyi  missing.pyi
pandas-stubs/core/groupby/: __init__.pyi  base.pyi  categorical.pyi  generic.pyi  groupby.pyi  grouper.pyi  indexing.pyi  ops.pyi
pandas-stubs/core/indexers/: __init__.pyi  objects.pyi  utils.pyi
pandas-stubs/core/indexes/: accessors.pyi  api.pyi  base.pyi  category.pyi  datetimes.pyi  (+9 more)
pandas-stubs/errors/: __init__.pyi
pandas-stubs/io/: __init__.pyi  api.pyi  clipboards.pyi  common.pyi  date_converters.pyi  feather_format.pyi  gbq.pyi  gcs.pyi  html.pyi  iceberg.pyi  orc.pyi  parquet.pyi  parsers.pyi  pickle.pyi  pytables.pyi  s3.pyi  spss.pyi  sql.pyi  stata.pyi  xml.pyi
pandas-stubs/plotting/: __init__.pyi  _core.pyi  _misc.pyi
pandas-stubs/tseries/: __init__.pyi  api.pyi  frequencies.pyi  holiday.pyi  offsets.pyi
pandas-stubs/util/: __init__.pyi  _decorators.pyi  _depr_module.pyi  _doctools.pyi  _exceptions.pyi  _print_versions.pyi  _test_decorators.pyi  _tester.pyi  _validators.pyi
scripts/: __init__.py  _job.py  build.py  test.py  tests.py  type_completeness.py
scripts/style/: __init__.py  _step.py  procedures.py  run.py
scripts/test/: __init__.py  _step.py  procedures.py  run.py
tests/: __init__.py  _typing.py  conftest.py  dtypes.py  requirements.txt  test_api_types.py  test_api_typing.py  test_arrays.py  test_col.py  test_config.py  test_dtypes.py  test_errors.py  test_excel_converters.py  test_extension.py  test_frame.py  test_frozenset.py  test_groupby.py  test_holidays.py  test_indexes.py  test_internal.py  test_interval.py  test_interval_index.py  test_io.py  test_merge.py  test_natype.py  test_pandas.py  test_plotting.py  test_resampler.py  test_scalars.py  test_series.py  test_series_arithmetic.py  test_string_accessors.py  test_styler.py  test_testing.py  test_timefuncs.py  test_typing.py  test_utility.py  test_windowing.py  utils.py
tests/arrays/: test_arrays.py  test_arrow.py  test_arrow_extension_array.py  test_arrow_string_array.py  test_base_string_.py  test_base_string_array.py  test_boolean.py  test_boolean_array.py  test_boolean_arrays.py  test_categorical.py  test_cumul.py  test_datetime_array.py  test_datetime_arrays.py  test_extension_array.py  test_floating.py  test_floating_array.py  test_integer.py  test_integer_array.py  test_integer_arrays.py  test_interger.py  test_interval.py  test_interval_array.py  test_numpy_.py  test_numpy_extension_array.py  test_period.py  test_period_array.py  test_sparse.py  test_string_.py  test_string_array.py  test_string_arrow.py  test_timedelta_array.py  test_timedelta_arrays.py  test_timedeltas.py
tests/data/: myhtml_table.tpl
tests/frame/: test_frame.py  test_groupby.py  test_indexing.py
tests/indexes/: test_add.py  test_categoricalindex.py  test_datetime_index.py  test_datetime_index_1440.py  test_floordiv.py  test_index_float.py  test_indexes.py  test_mul.py  test_multi_indexes.py  test_rangeindex.py  test_sub.py  test_timedelta_indexes.py  test_truediv.py
tests/pandas/: __init__.py  test_frame.py  test_indexes.py  test_interval.py  test_pandas.py  test_series.py  test_testing.py  test_timefuncs.py
tests/scalars/: test_scalars.py
tests/series/: test_add.py  test_agg.py  test_cumul.py  test_floordiv.py  test_indexing.py  test_mul.py  test_properties.py  test_series.py  test_series_float.py  test_sub.py  test_truediv.py
typings/pandas/: _testing.pyi  _typing.pyi
(+272 files in other folders)
