[metadata]
name = pandas-stubs
description = Type annotations for pandas
long_description = file: README.md
long_description_content_type = text/markdown
url = https://pandas.pydata.org
author = The Pandas Development Team
author_email = pandas-dev@python.org
license = BSD-3-Clause
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
project_urls =
    Bug Tracker = https://github.com/pandas-dev/pandas-stubs/issues
    Documentation = https://pandas.pydata.org/pandas-docs/stable
    Source Code = https://github.com/pandas-dev/pandas-stubs

[options]
install_requires =
    numpy>=1.22.3
	typing_extensions>=4.2
python_requires = >=3.8

[bumpversion]
current_version = 1.4.2.220604
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\.(?P<release>\d+)
serialize = 
	{major}.{minor}.{patch}.{release}
message = [skip ci] Bump pandas-stubs version: {current_version} -> {new_version}

[bumpversion:file:setup.py]
